--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -1,29 +1,59 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i');
+
+/*
+colors:
+light green - rgba(54,178,148,1);
+dark green - rgba(0,160,125,1);
+blueish green - rgba(0,189,179,1);
+light blue - rgba(154,244,239,1);
+*/
+
+
+html {
+    font-family: 'Ubuntu', sans-serif;
+    padding: 20px;
+}
+
 body {
     text-align: center;
 }
 
 body h1 {
-    color: rgba(2, 132, 130,1);
+    color: rgba(0,160,125,1);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 35px;
 }
 
 body h2 {
-    color: #ffd700;
+    color: rgba(0,189,179,1);
 }
 
+body .box {
+    background-color: rgba(154,244,239,0.3);
+    padding: 8%;
+    text-align: center;
+}
+
+
 nav {
-    background-color: #808080;
+    background-color: rgba(154,244,239,0.8);
 }
 
 nav a {
-    background-color: #ffbf00;
+    background-color: rgba(54,178,148,0.6);
     color: white;
     padding: 35px;
     display: block;
     float: left;
+    font-weight: 400;
+    text-decoration: none;
 }
 
 nav a:hover {
-    background-color: #ee5f3c;
+    color: black;
+    background-color: rgba(54,178,148,0.3);
+    font-weight: 100;
 }
 
 .clearfix:after {
@@ -43,12 +73,21 @@ div .board {
     clear: left;
 }
 
+img {
+    height: 200px;
+    width: 150px;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
 div .card {
     height: 200px;
     width: 150px;
     border: 1px solid black;
-    background-color: yellow;
-    border-radius: 10px;
+    background-image: url(/images/front.png);
+    background-position: center;
+    background: cover;
+    border-radius: 15px;
     float: left;
     margin: 8%;
 }
@@ -56,9 +95,20 @@ div .card {
 footer {
     width: 100%;
     float: left;
-    background-color: #808080;
+    background-color: rgba(0,189,179,1);;
 }
 
-footer .name {
-    color: #ff0000;
+footer span {
+    color: deeppink;
+    transition: 0.5s;
+}
+
+footer a {
+    color: deeppink;
+    text-decoration: none;
+}
+
+footer span, a:hover {
+    color: purple;
+    font-weight: 600;
 }
