--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -6,16 +6,23 @@ light green - rgba(54,178,148,1);
 dark green - rgba(0,160,125,1);
 blueish green - rgba(0,189,179,1);
 light blue - rgba(154,244,239,1);
+pink - rgba(255,198,194,1);
+iceberg yellowish - rgba(255,209,112,1);
 */
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 html {
     font-family: 'Ubuntu', sans-serif;
     padding: 20px;
-}
-
-body {
-    text-align: center;
+    overflow: auto;
+    max-width: 960px;
+    margin: auto;
+    position: relative;
 }
 
 body h1 {
@@ -23,34 +30,74 @@ body h1 {
     text-transform: uppercase;
     font-weight: 800;
     font-size: 35px;
+    padding: 2vh;
+    text-align: center;
+    text-shadow: 1px 1px 1px #000000, 3px 3px 5px pink;
 }
 
 body h2 {
     color: rgba(0,189,179,1);
 }
 
+body p {
+    padding: 5px;
+}
+
 body .box {
+    width: 100%;
     background-color: rgba(154,244,239,0.3);
     padding: 8%;
-    text-align: center;
+    float: left;
+    clear: both;
+    position: relative;
 }
 
+body .score-board {
+    width: 100px;
+    height: 100px;
+    left: 83%;
+    top: 18%;
+    background-color: rgba(255,198,194,0.7);
+    display: inline-block;
+    position: fixed;
+    border: 1px black dotted;
+    border-radius: 35%;
+}
+
+body .score-board p {
+    top: 15%;
+    text-align: center;
+    font-size: 32px;
+    color: white;
+    text-shadow: .7px .7px .7px black, 1px 1px 3px rgba(0,160,125,1);
+}
 
 nav {
-    background-color: rgba(154,244,239,0.8);
+    width: 100%;
+    height: 50px;
+    position: relative;
 }
 
-nav a {
+nav ul li {
+    width: 25%;
+    float: left;
+    text-align: center;
+    list-style: none;
+}
+
+nav ul li a {
+    width: 100%;
+    display: inline-block;
     background-color: rgba(54,178,148,0.6);
     color: white;
     padding: 35px;
-    display: block;
     float: left;
     font-weight: 400;
     text-decoration: none;
+    transition: 0.5s;
 }
 
-nav a:hover {
+nav ul li a:hover {
     color: black;
     background-color: rgba(54,178,148,0.3);
     font-weight: 100;
@@ -65,6 +112,10 @@ nav a:hover {
     font-size: 0;
 }
 
+div #game-board {
+    background-color: yellow;
+}
+
 div .board {
     height: 50%;
     width: 50%;
@@ -74,32 +125,33 @@ div .board {
 }
 
 img {
-    height: 200px;
-    width: 150px;
+    height: 150px;
+    width: 100px;
     border: 1px solid black;
     border-radius: 15px;
 }
 
 div .card {
-    height: 200px;
-    width: 150px;
+    height: 150px;
+    width: 100px;
     border: 1px solid black;
-    background-image: url(/images/front.png);
+    background-image: url(/images/logo.png);
     background-position: center;
-    background: cover;
+    background-size: cover;
     border-radius: 15px;
     float: left;
-    margin: 8%;
+    margin: 1%;
 }
 
 footer {
     width: 100%;
     float: left;
-    background-color: rgba(0,189,179,1);;
+    background-color: rgba(0,189,179,0.8);
+    text-align: center;
 }
 
 footer span {
-    color: deeppink;
+    color: pink;
     transition: 0.5s;
 }
 
@@ -108,7 +160,7 @@ footer a {
     text-decoration: none;
 }
 
-footer span, a:hover {
+footer a:hover {
     color: purple;
     font-weight: 600;
 }
