--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -112,10 +112,6 @@ nav ul li a:hover {
     font-size: 0;
 }
 
-div #game-board {
-    background-color: yellow;
-}
-
 div .board {
     height: 50%;
     width: 50%;
@@ -141,6 +137,18 @@ div .card {
     border-radius: 15px;
     float: left;
     margin: 1%;
+    transition: 2s;
+    transition-timing-function: cubic-bezier(.5, 2, .8, -2);
+
+}
+
+div .card:hover {
+    transform: rotate(5deg);
+    filter: drop-shadow(10px 15px 10px rgba(0,0,0,0.8));
+}
+
+div .card:active {
+    filter: drop-shadow(15px 25px 15px rgba(0,0,0,0.9));
 }
 
 footer {
