--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -155,7 +155,7 @@ div .card {
     height: 150px;
     width: 100px;
     border: 1px solid black;
-    background-image: url("http://imgur.com/a/as1UW");
+    background-image: url("https://imgur.com/a/as1UW");
     background-position: center;
     background-size: cover;
     border-radius: 15px;
