--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -16,7 +16,6 @@ light purple - rgba(215,155,230,1);
     margin: 0;
     box-sizing: border-box;
 }
-
 html {
     font-family: 'Ubuntu', sans-serif;
     padding: 20px;
@@ -25,7 +24,6 @@ html {
     margin: auto;
     position: relative;
 }
-
 body h1 {
     color: rgba(0,160,125,1);
     text-transform: uppercase;
@@ -35,15 +33,12 @@ body h1 {
     text-align: center;
     text-shadow: 1px 1px 1px #000000, 3px 3px 5px pink;
 }
-
 body h2 {
     color: rgba(0,189,179,1);
 }
-
 body p {
     padding: 5px;
 }
-
 body .box {
     width: 100%;
     background-color: rgba(154,244,239,0.3);
@@ -52,7 +47,6 @@ body .box {
     clear: both;
     position: relative;
 }
-
 body .score-board {
     width: 100px;
     height: 100px;
@@ -64,7 +58,6 @@ body .score-board {
     border: 1px black dotted;
     border-radius: 35%;
 }
-
 body .score-board p {
     top: 15%;
     text-align: center;
@@ -72,7 +65,6 @@ body .score-board p {
     color: white;
     text-shadow: .7px .7px .7px black, 1px 1px 3px rgba(0,160,125,1);
 }
-
 body .timer-board {
     width: 100px;
     height: 100px;
@@ -84,7 +76,6 @@ body .timer-board {
     border: 1px black dotted;
     border-radius: 35%;
 }
-
 body .timer-board p {
     top: 15%;
     text-align: center;
@@ -92,7 +83,6 @@ body .timer-board p {
     color: rgba(0,189,179,1);
     text-shadow: .7px .7px .7px black, 1px 1px 3px rgba(0,160,125,1);
 }
-
 body .reset-button {
     width: 100px;
     height: 100px;
@@ -104,7 +94,6 @@ body .reset-button {
     border: 1px black dotted;
     border-radius: 35%;
 }
-
 body .reset-button p {
     top: 25%;
     text-align: center;
@@ -112,20 +101,17 @@ body .reset-button p {
     color: white;
     text-shadow: .9px .9px .9px black, 2px 2px 3.5px rgba(255,200,198,1);
 }
-
 nav {
     width: 100%;
     height: 50px;
     position: relative;
 }
-
 nav ul li {
     width: 25%;
     float: left;
     text-align: center;
     list-style: none;
 }
-
 nav ul li a {
     width: 100%;
     display: inline-block;
@@ -137,20 +123,17 @@ nav ul li a {
     text-decoration: none;
     transition: 0.5s;
 }
-
 nav ul li a:hover {
     color: black;
     background-color: rgba(54,178,148,0.3);
     font-weight: 100;
 }
-
 img {
     height: 150px;
     width: 100px;
     border: 1px solid black;
     border-radius: 15px;
 }
-
 div .card {
     height: 150px;
     width: 100px;
@@ -164,33 +147,33 @@ div .card {
     transition: 2s;
     transition-timing-function: cubic-bezier(.5, 2, .8, -2);
 }
-
 div .card:hover {
     transform: rotate(5deg);
     filter: drop-shadow(10px 15px 10px rgba(0,0,0,0.8));
 }
-
 div .card:active {
     filter: drop-shadow(15px 25px 15px rgba(0,0,0,0.9));
 }
+h1 .timer-out {
+    
+}
+h2 .final-score {
 
+}
 footer {
     width: 100%;
     float: left;
     background-color: rgba(0,189,179,0.8);
     text-align: center;
 }
-
 footer span {
     color: pink;
     transition: 0.5s;
 }
-
 footer a {
     color: deeppink;
     text-decoration: none;
 }
-
 footer a:hover {
     color: purple;
     font-weight: 600;
