--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -155,9 +155,8 @@ div .card {
     height: 150px;
     width: 100px;
     border: 1px solid black;
-    background-image: url("https://imgur.com/a/as1UW");
     background-position: center;
-    background-size: cover;
+/*    background-size: cover;*/
     border-radius: 15px;
     float: left;
     margin: 1%;
